Closed Bug 398156 Opened 18 years ago Closed 18 years ago

Several wairole to ATK object attributes missing

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: scott, Assigned: aaronlev)

References

(Blocks 2 open bugs)

Details

(Keywords: access, regression, Whiteboard: orca:urgent)

Attachments

(2 files, 1 obsolete file)

Recently we have lost several object attributes, namely xml-roles, related to ARIA widgets. This is not an across the board loss, but is confined to a small subset. I have seen the problem in the ARIA trees and comboboxes but not in the radiobuttons and others. The problem is also not specific to HTML or XHTML. I will try to get a more detailed list in the near future.
Blocks: aria
Blocks: orca
Blocks: fox3access
Severity: normal → major
Whiteboard: orca:urgent
Evan, look at the Mozilla.org test case first.
Assignee: aaronleventhal → Evan.Yan
Assignee: Evan.Yan → aaronleventhal
Status: NEW → ASSIGNED
Attachment #284467 - Flags: review?
Attachment #284469 - Flags: review?
Attachment #284467 - Flags: review? → review?(simon.bates)
Attachment #284469 - Attachment is obsolete: true
Attachment #284469 - Flags: review?
Attachment #284470 - Flags: review? → review?(simon.bates)
Keywords: access, regression
Attachment #284470 - Flags: review?(simon.bates) → review+
Attachment #284470 - Flags: approval1.9?
Attachment #284470 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Forgot to mark fixed.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
Attachment #284467 - Flags: review?(simon.bates)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: