Bug 398156. Several ARIA-related object attributes missing. r=simonjb, a=dsicore